--- a/assets/css/templatemo-chain-app-dev.css
+++ b/assets/css/templatemo-chain-app-dev.css
@@ -244,11 +244,11 @@ body {
 .gradient-button a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #fff !important;
+  color: black;
   text-transform: capitalize;
   font-size: 15px;
   background: rgb(19,175,240);
-  background: linear-gradient(105deg, rgba(91,104,235,1) 0%, rgba(40,225,253,1) 100%);
+  background: white;
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -258,7 +258,7 @@ body {
 .gradient-button a:hover {
   color: #fff !important;
   background: rgb(19,175,240);
-  background: linear-gradient(105deg, rgba(91,104,235,1) 0%, rgba(40,225,253,1) 100%);
+  background: linear-gradient(105deg, rgba(91,46,255,61) 0%, rgba(138,99,255,44) 100%);
 }
 
 .border-button a {
@@ -328,8 +328,8 @@ header
   background-color: transparent;
 }
 
-.header-area {
-  background-color: transparent;
+.header-area { 
+  background: linear-gradient(105deg, rgba(91,46,255,61) 0%, rgba(138,99,255,44) 100%);
   border-bottom: 1px solid rgba(42,42,42,0.2);
   position: absolute;
   left: 0px;
@@ -414,7 +414,7 @@ header
   display: block;
   font-weight: 500;
   font-size: 15px;
-  color: #2a2a2a;
+  color: #fff;
   text-transform: capitalize;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -450,7 +450,7 @@ header
   font-family: FontAwesome;
   content: "\f107";
   font-size: 12px;
-  color: #2a2a2a;
+  color: #fff;
   position: absolute;
   right: 18px;
   top: 12px;
@@ -901,7 +901,7 @@ Banner Style
 
 .main-banner:after {
   content: '';
-  background-image: url(../images/slider-left-dec.png);
+  background-image: url(../images/slider-left-d.png);
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
@@ -1082,7 +1082,7 @@ Services Style
 }
 
 .service-item:hover {
-  background-image: url(../images/service-bg.jpg);
+  background-image: url(../images/service-bg1.png);
   background-position: right top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2066,6 +2066,7 @@ responsive
   .pricing-item-regular {
     margin-bottom: 30px;
   }
+
   .our-portfolio .owl-nav {
     display: none !important;
   }
