--- a/templatemo-3d-coverflow.css
+++ b/templatemo-3d-coverflow.css
@@ -29,6 +29,12 @@ https://templatemo.com/tm-595-3d-coverflow
 .uper_body h1 {
   position: relative;
   z-index: 2;
+
+  font-weight: 800;
+  letter-spacing: 2px;
+
+  font-size: clamp(2.2rem, 6vw, 4.5rem);
+  line-height: 1.1;
 }
 
 
