--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,19 +1,13 @@
-
-.gallery-item {
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-}
-
 .gallery-item img {
   width: 100%;
   height: 250px;
   object-fit: cover;
-  transition: transform 0.4s ease;
+  transition: 0.3s;
+  cursor: zoom-in;
 }
 
-.gallery-item:hover img {
-  transform: scale(1.2);
+.gallery-item img:hover {
+  transform: scale(1.1);
 }
 
 .preview {
